# llm-canvas

./: .gitignore  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  build.ps1  build.py  build.sh  build_frontend.py  client-config.yaml  pyproject.toml  pytest.ini  run_tests.py  test_canvas_api.py
.github/: README.md  labeler.yml
.github/workflows/: dependencies.yml  gh-deploy.yml  issue-pr-management.yml  pr.yml  release.yml  security.yml
client/: __init__.py  canvas.py  canvas_client.py
doc/: business_plan.md  canvas_client.md  client_generation.md  manage_canvas.md  merge_strategies.md  start_canvas_server.md  support_message_type.md
doc/server/: api.md  sse_api.md
doc/web_ui/: routes.md  support_message_type.md
examples/: README.md  __init__.py  basic_usage.py  chat_with_claude.py  hello_example.py  investment_decision_example.py  pressure_test_example.py  run_examples.py  shared_client.py  test_server_health.py  tree_example.py  utils.py  vacation_planning_example.py  weather_tool_example.py
examples/claude/: chain.py  image.py  parallelization.py  route.py  utils.py
generated-clients/llm-canvas-client/llm_canvas_api_client/api/v1/: get_canvas_api_v1_canvas_get.py
generated-clients/llm-canvas-client/llm_canvas_api_client/models/: message.py
generated_client/: __init__.py
llm_canvas/: __init__.py  _api.py  _cli.py  _local_registry.py  _local_server.py  _mockData.py  canvas.py  canvasClient.py  canvasRegistry.py  canvas_client.py  canvas_registry.py  server.py  types.py
llm_canvas/_server/: _api.py  _events.py  _registry.py  _server.py  server.py
llm_canvas_generated_client/llm_canvas_api_client/api/v1/: get_canvas_api_v1_canvas_get.py
llm_canvas_generated_client/llm_canvas_api_client/models/: __init__.py
schemas/: openapi.json
scripts/: __init__.py  generate_client.py  generate_openapi_schema.py
server/: __init__.py  api.py  canvas_registry.py  cli.py  server.py  types.py
tests/: conftest.py  test_canvas.py  test_sse_api.py
web_ui/: .env.development  .env.example  .env.local.example  .env.production  .eslintignore  .gitignore  index.gh-pages.html  index.html  openapi-ts.config.js  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web_ui/public/: 404.html
web_ui/src/: App.tsx  index.css  types.ts  vite-env.d.ts
web_ui/src/api/: canvasExampleService.ts  canvasService.ts  mockData.ts
web_ui/src/client/: index.ts
web_ui/src/client/core/: CancelablePromise.ts  OpenAPI.ts  request.ts
web_ui/src/client/models/: Base64ImageSourceParam.ts  CacheControlEphemeralParam.ts  CanvasCommitMessageEvent.ts  CanvasData.ts  CanvasListResponse.ts  CanvasSummary.ts  CanvasUpdateMessageEvent.ts  CitationCharLocationParam.ts  CitationContentBlockLocationParam.ts  CitationPageLocationParam.ts  CitationSearchResultLocationParam.ts  CitationWebSearchResultLocationParam.ts  CitationsConfigParam.ts  CommitMessageRequest.ts  CreateCanvasRequest.ts  CreateCanvasResponse.ts  CreateMessageResponse.ts  DeleteCanvasResponse.ts  GetCanvasResponse.ts  HealthCheckResponse.ts  ImageBlockParam.ts  Message.ts  MessageNode.ts  SSECanvasCreatedEvent.ts  SSECanvasDeletedEvent.ts  SSECanvasDeletedEventData.ts  SSECanvasUpdatedEvent.ts  SSEDocumentationResponse.ts  SSEErrorEvent.ts  SSEErrorEventData.ts  SSEHeartbeatEvent.ts  SSEMessageCommittedEvent.ts  SSEMessageDeletedEvent.ts  SSEMessageDeletedEventData.ts  SSEMessageUpdatedEvent.ts  SearchResultBlockParam.ts  TextBlockParam.ts  ToolResultBlockParam.ts  ToolUseBlockParam.ts  URLImageSourceParam.ts  (+1 more)
web_ui/src/client/schemas/: $Base64ImageSourceParam.ts  $CacheControlEphemeralParam.ts  $CanvasCommitMessageEvent.ts  $CanvasData.ts  $CanvasListResponse.ts  $CanvasSummary.ts  $CanvasUpdateMessageEvent.ts  $CitationCharLocationParam.ts  $CitationContentBlockLocationParam.ts  $CitationPageLocationParam.ts  $CitationSearchResultLocationParam.ts  $CitationWebSearchResultLocationParam.ts  $CitationsConfigParam.ts  $CommitMessageRequest.ts  $CreateCanvasRequest.ts  $CreateCanvasResponse.ts  $CreateMessageResponse.ts  $DeleteCanvasResponse.ts  $GetCanvasResponse.ts  $HealthCheckResponse.ts  $ImageBlockParam.ts  $Message.ts  $MessageNode.ts  $SSECanvasCreatedEvent.ts  $SSECanvasDeletedEvent.ts  $SSECanvasDeletedEventData.ts  $SSECanvasUpdatedEvent.ts  $SSEDocumentationResponse.ts  $SSEErrorEvent.ts  $SSEErrorEventData.ts  $SSEHeartbeatEvent.ts  $SSEMessageCommittedEvent.ts  $SSEMessageDeletedEvent.ts  $SSEMessageDeletedEventData.ts  $SSEMessageUpdatedEvent.ts  $SearchResultBlockParam.ts  $TextBlockParam.ts  $ToolResultBlockParam.ts  $ToolUseBlockParam.ts  $URLImageSourceParam.ts  (+1 more)
web_ui/src/client/services/: V1Service.ts
web_ui/src/components/: CanvasCard.tsx  CanvasGallery.tsx  CanvasView.tsx  CopyButton.tsx  ExampleCard.tsx  Header.tsx  ImageBlockView.tsx  Logo.tsx  MarkdownRenderer.tsx  MessageBlockView.tsx  MessageNode.tsx  ServerStatusIndicator.tsx  SyntaxHighlighter.tsx  TextBlockView.tsx  ThemeProvider.tsx  ThemeToggle.tsx  ToolResultBlockView.tsx  ToolUseBlockView.tsx
web_ui/src/components/ui/: button.tsx
web_ui/src/config/: index.ts
web_ui/src/examples/: chain.json  image.json  parallelization.json  routing.json  sourceCode.ts
web_ui/src/hooks/: index.ts  useCanvas.ts  useIsGithubPages.ts  useIsMobile.ts  useServerStatus.ts  useTheme.ts
web_ui/src/pages/: CanvasPage.tsx  DocumentationPage.tsx  GalleryPage.tsx  GithubGalleryPage.tsx  GithubLandingPage.tsx
web_ui/src/store/: canvasStore.ts  themeStore.ts
web_ui/src/types/: virtual-modules.d.ts
web_ui/vite-plugins/: example-source-loader.ts
