[project]
name = "llm-canvas"
version = "0.1.0"
description = "Visualize LLM conversations as a navigable canvas"
authors = [ { name = "LittleLittleCloud" } ]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "visualization", "chat", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers"
]
dependencies = [
    "anthropic>=0.62.0",
    "fastapi>=0.110.0",
    "openai>=1.99.5",
    "uvicorn[standard]>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/yourname/llm_canvas"

[project.optional-dependencies]
server = ["uvicorn[standard]>=0.29.0"]
dev = ["pytest>=7.0", "black", "ruff", "mypy"]

[project.scripts]
llm-canvas-serve = "llm_canvas.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_canvas"]
